cscsite/assets/src/sass/center/pages/testimonials.scss
// Used on testimonials/ and index pages
.testimonials-wrapper {

  .testimonials {
    @extend .container;
    margin: 0px auto;

    .testimonial {
      margin-bottom: 20px;
      blockquote {
        background: #f8f8f8 none repeat scroll 0 0;
        border: medium none;
        color: #333;
        display: block;
        font-size: 16px;
        line-height: 1.55;
        padding: 20px 20px 20px 55px;
        position: relative;

        &:before {
          color: #bbb;
          font-size: 50px;
          content: "\201C";
          position: absolute;
          margin: 0 0 0 -40px;
        }

        &:after {
          width: 0;
          height: 0;
          left: 80px;
          content: " ";
          bottom: -30px;
          position: absolute;
          border-style: solid;
          border-width: 30px 30px 0 0;
          border-color: #f8f8f8 transparent transparent transparent;
        }
      }

      div {
        overflow: hidden;

        img {
          @extend .pull-left;
          border: 1px solid #f5f5f5;
          border-radius: 150px !important;
          height: 75px;
          padding: 3px;
          width: 75px;
          margin-right: 15px;
        }

        span {
          display: block;
          color: #e6400c;
          font-size: 16px;
          font-weight: 300;
          margin: 18px 0 6px;
        }

        a {
          color: #e6400c;
          text-decoration: underline;
        }
      }

      &.right {
        blockquote {
          &:after {
            left: auto;
            right: 80px;
            border-width: 30px 0 0 30px;
          }
        }
        div {
          text-align: right;
          img {
            @extend .pull-right;
            margin-left: 15px;
            margin-right: 0;
          }
        }
      }
    }

    &.__list {
      .testimonial {
        margin-bottom: 40px;

        &.right {
          float: right;
        }

        blockquote {
          padding: 30px;
          &:before {
            display: none;
          }
        }
      }
    }
  }
}

